# scratch-cli

./: README.md  pyproject.toml
scratch-cli/: __init__.py
scratch_cli/: __main__.py  _args.py  appdata.py  assets.py  context.py  cookies.py  decorator.py  login.py  rfmt.py  safmt.py  scli_config.py  serialize.py  typed_cookies.py  util.py
scratch_cli/assets/: activity.md  faves.md  featured_project.md  feed.md  lovefeed.md  loves.md  msgs.md  project.md  project_page.md  shared.md  user.md  user_profile.md
scratch_cli/cmd/: __init__.py  config.py  feed.py  find.py  group.py  groups.py  login.py  messages.py  profile.py  session.py  sessions.py  ungroup.py
scratch_cli/cookies/: __init__.py  dced.py  handler.py
