[project]
name = "scratch-cli"
dynamic = ["version"]
requires-python = ">= 3.13"
authors = [
  {name = "faretek1"}
]
description = "CLI for the scratch website"
readme = "README.md"
license = "MIT"

keywords = ["scratch", "CLI"]
dependencies = [
    "scratchattach"
]
[project.scripts]
#spam-cli = "spam:main_cli"

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/inflated-goboscript/scratch-cli"
Issues = "https://github.com/inflated-goboscript/scratch-cli/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "scratch_cli/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["scratch_cli"]
